--- a/uno.html
+++ b/uno.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Dos</title>
 </head>
 <body>
     <h2>este es el titulo de la pagina dos</h2>
